<resources>
    <string name="app_name">LightBox</string>
    <string name="action_settings">setting</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="scene">场景</string>
    <string name="setting">设置</string>
    <string name="data">数据</string>
    <string name="measure">测量</string>
    <string name="data_1">数据</string>
    <string name="dat_2">数据！</string>
    <string name="measure_1">测量</string>
    <string name="user_quickly">想快速了解灯光测量吗？赶快使用吧！</string>
    <string name="scene_1">场景</string>
    <string name="setting_1">设置</string>
    <string name="settingBox">想快速了解LightBox吗？就找我！</string>
    <string name="measure_four">单次测量 多次测量 连续测量 闪光测量</string>
    <string name="single_txt">单次测量</string>
    <string name="many_txt">多次测量</string>
    <string name="continuous_txt">连续测量</string>
    <string name="flash_txt">闪光测量</string>

    <string name="ble_not_supported">BLE 不支持</string>
    <string name="label_data">数据:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">状态:</string>
    <string name="no_data">无数据</string>
    <string name="connected">连接</string>
    <string name="disconnected">无连接</string>
    <string name="title_devices">扫描BLE设备</string>
    <string name="error_bluetooth_not_supported">不支持蓝牙.</string>

    <string name="unknown_device">未知设备</string>
    <string name="unknown_characteristic">未知的特征</string>
    <string name="unknown_service">未知的服务</string>

    <string name="fra1">fra1</string>
    <string name="fra2">fra2</string>
    <string name="fra3">fra3</string>
    <!-- Menu items -->
    <string name="menu_connect">连接</string>
    <string name="menu_disconnect">无连接</string>
    <string name="menu_scan">扫描</string>
    <string name="menu_stop">停止</string>
    <string name="Mydata_text">我的数据库</string>
    <string name="dataMap_text">数据地图</string>
    <string name="lightScene">灯光场景图</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>



    <string name="connect">Updating</string>
    <string name="connect_text_two">修改蓝牙密码</string>
    <string name="old_password">Old password</string>
    <string name="hint_password">New Password</string>
    <string name="connect_button">修改密码</string>
    <string name="forgot_text">Forgot your password?</string>
    <string name="reset_text">密码重置</string>


</resources>
